Use commonAnnotation to fix rollover

--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -6,26 +6,25 @@ spec:
   template:
     spec:
       containers:
-        - name: app
-          image: greeter-app
-          env:
-            - name: GREETING
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.labels['version']
-          resources:
-            requests:
-              memory: 32M
-              cpu: 5m
-            limits:
-              memory: 128M
-              cpu: 20m
-          ports:
-            - containerPort: 8080
-              protocol: TCP
-              name: http
-          readinessProbe:
-            httpGet:
-              port: 8080
-              path: /health
+      - name: python
+        image: hello-app
+        env:
+        - name: GREETING
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.annotations['v']
+        resources:
+          requests:
+            cpu: 10m
+            memory: 50Mi
+          limits:
+            cpu: 50m
+            memory: 100Mi
+        readinessProbe:
+          httpGet:
+            port: 8080
+            path: /health
+        ports:
+        - containerPort: 8080
+          name: http
