--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -1,11 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  app: greeter-app
-  version: v0
+namePrefix: hello-
 
-namePrefix: greeter-
+commonLabels:
+  app: hello-app
+
+commonAnnotations:
+  v: "0"
 
 resources:
   - deployment.yaml
