--- a/kustomize/overlays/v1/kustomization.yaml
+++ b/kustomize/overlays/v1/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  version: v1
+commonAnnotations:
+  v: "1" 
 
 resources:
   - ../../base
