--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,10 +1,12 @@
-apiVersion: skaffold/v2beta28
+apiVersion: skaffold/v2beta27
 kind: Config
+
 metadata:
-  name: greeter-app
+  name: hello-app
+
 build:
   artifacts:
-  - image: greeter-app
+  - image: hello-app
     docker:
       dockerfile: Dockerfile
 
